# rotate-captcha-crack

./: .gitignore  pyproject.toml  ruff.toml
