[project]
name = "rotate-captcha-crack"
version = "0.6.0a5"
authors = [{ name = "lumina37", email = "starry.qvq@gmail.com" }]
urls = { Repository = "https://github.com/lumina37/rotate-captcha-crack" }
dependencies = ["torch", "torchvision", "matplotlib", "tqdm"]
requires-python = ">=3.11,<3.15"
readme = "README.md"

[project.optional-dependencies]
server = ["aiohttp"]

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", marker = "platform_system != 'Darwin'" }]
torchvision = [{ index = "pytorch-cu130", marker = "platform_system != 'Darwin'" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
